29/11/2023 - V7.0.8
#####################################

#### Bugs
1. Fixed document approval notification
2. Defaults false for approved in documents



29/11/2023 - V7.0.7
#####################################

#### Bugs
1. Better remittance email messages
2. Better templating for CDP, for Sirius 
3. Fixed approvals for generated docs end dates
4. Fixed issue with investor notice

29/11/2023 - V7.0.6
#####################################

#### Delete All for Funds 
1. Added delete all button for funds
2. Minor fix for fund col in commitments filter view

28/11/2023 - V7.0.5
#####################################

#### Import Uploads Sanitization ####
1. All data headers are sanitized to titlecase and stripped and squeezed (def validate_headers)
2. All data in rows is also sanitized by strip and squeeze (def process_rows)

#### Filter by funds in filters ####
1. Added special filter for funds
2. Allow only XL to be uploaded for import upload

#### Import Upload of fund units ####
1. Import for remittances
2. Import for distributions

#### Bug ####
1. Fixed bug for investor login commitments not loading
2. Removed unwanted button request access
