@@ -4,7 +4,9 @@
 #### Bugs
 1. Fixed document approval notification
 2. Defaults false for approved in documents
-
+3. Added uncalled_amount to commitment
+4. Fixed bug in account entry allocation engine generate custom field
+5. Added methods to enable / disable permissions for all investor entities
 
 
 29/11/2023 - V7.0.7
